# targets

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
apps/: __init__.py  health.py
apps/collector/: __init__.py  health.py  run_clinicaltrials.py  run_companies.py  run_pubmed.py  scheduler.py
apps/processor/: __init__.py  classify.py  company_event_classifier.py  llm_extract.py  merge.py  metrics.py  publication_extract.py  scoring.py  source_reliability.py  trial_diff.py
apps/reporter/: __init__.py  health.py  publish.py  review_sync.py  weekly.py  weekly_template.py
config/: assets-seed.yaml  orgs-seed.yaml  scoring.yaml
config/caddy/: targets.qyunsgen.com.caddy
config/indications/: atopic_dermatitis.yaml  csu.yaml  prurigo_nodularis.yaml
docs/: event-schema.md  medical-review-rules.md  product-spec.md  reporting-style.md  source-registry.md
migrations/: env.py
prompts/: event_extract.md  weekly_summary.md
scripts/: install-vultr-user-systemd.sh  validate-plan-dir-layout.sh  verify-plan-001.sh  verify-plan-001a.sh  verify-plan-001b.sh  verify-plan-001c.sh  verify-plan-001d.sh  verify-plan-001e.sh  verify-plan-001f.sh
templates/: weekly-brief.md.j2
tests/: test_asset_resolver.py  test_clinicaltrials_adapter.py  test_company_adapters.py  test_dedup.py  test_domain_models.py  test_merge.py  test_obsidian_exporter.py  test_ops.py  test_pubmed_adapter.py  test_review_sync.py  test_scoring.py  test_target_dictionary.py  test_trial_diff.py  test_weekly_pipeline.py  test_weekly_template.py
(+36 files in other folders)
